--- a/src/styles/github-markdown.css
+++ b/src/styles/github-markdown.css
@@ -1,11 +1,9 @@
-/*light*/
-
 .markdown-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #1f2328;
-  background-color: #ffffff;
+  color: #1f2328 !important;
+  background-color: transparent !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans',
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 16px;
@@ -976,6 +974,11 @@
 .markdown-body g-emoji img {
   width: 1em;
   height: 1em;
+}
+
+.markdown-body ul,
+.markdown-body ol {
+  list-style-type: initial;
 }
 
 .markdown-body .task-list-item {
